--- a/index.html
+++ b/index.html
@@ -21,89 +21,99 @@
   </head>
   <body>
     <div class="container">
-      <form id="searchform">
-        <input
-          type="text"
-          id="city"
-          placeholder="    🔍Enter your city"
-          autofocus="on"
-        />
-        <input type="submit" value="Search" id="search" />
-        <input type="button" value="Current City" id="cityButton" />
-      </form>
-      <h1></h1>
-      <ul>
-        <li id="currenttime"></li>
-      </ul>
-      <div class="row">
-        <div class="col-6">
-          <span class="bigemoji"> 🌒</span>
-          <span id="bigTemp" class="bigTemp">7</span>
-          <a href="#" id="°c"> °C </a> |
-          <a href="#" id="°f"> °F </a>
-        </div>
-        <div class="col-6">
-          <ul>
-            <li>Humidity: <span id="humidity">10</span>%</li>
-            <li>Wind: <span id="wind">5</span>mph</li>
-          </ul>
-        </div>
-        <div class="col-2.4">
-          <div class="card-group">
-            <div class="maincard">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Mon</h5>
+      <div class="weatherApp">
+        <form id="searchform">
+          <input
+            type="text"
+            id="city"
+            placeholder="    🔍Enter your city"
+            autofocus="on"
+          />
+          <input type="submit" value="Search" id="search" />
+          <input type="button" value="Current City" id="cityButton" />
+        </form>
+        <h1></h1>
+        <ul>
+          <li id="currenttime"></li>
+        </ul>
+        <div class="row">
+          <div class="col-6">
+            <span class="bigemoji"> 🌒</span>
+            <span id="bigTemp" class="bigTemp">7</span>
+            <a href="#" id="°c"> °C </a> |
+            <a href="#" id="°f"> °F </a>
+          </div>
+          <div class="col-6">
+            <ul>
+              <li>Humidity: <span id="humidity">10</span>%</li>
+              <li>Wind: <span id="wind">5</span>mph</li>
+            </ul>
+          </div>
+          <div class="col-2.4">
+            <div class="card-group">
+              <div class="maincard">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Mon</h5>
 
-                  <div class="emoji">🌤</div>
-                  <div class="temp">11°</div>
+                    <div class="emoji">🌤</div>
+                    <div class="temp">11°</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-2.4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Tue</h5>
+              <div class="col-2.4">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Tue</h5>
 
-                  <div class="emoji">🌤</div>
-                  <div class="temp">15°</div>
+                    <div class="emoji">🌤</div>
+                    <div class="temp">15°</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-2.4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Wed</h5>
+              <div class="col-2.4">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Wed</h5>
 
-                  <div class="emoji">🌦</div>
-                  <div class="temp">14°</div>
+                    <div class="emoji">🌦</div>
+                    <div class="temp">14°</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-2.4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Thu</h5>
+              <div class="col-2.4">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Thu</h5>
 
-                  <div class="emoji">🌦</div>
-                  <div class="temp">8°</div>
+                    <div class="emoji">🌦</div>
+                    <div class="temp">8°</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-2.4">
-              <div class="card">
-                <div class="card-body">
-                  <h5 class="card-title">Fri</h5>
+              <div class="col-2.4">
+                <div class="card">
+                  <div class="card-body">
+                    <h5 class="card-title">Fri</h5>
 
-                  <div class="emoji">🌧</div>
-                  <div class="temp">10°</div>
+                    <div class="emoji">🌧</div>
+                    <div class="temp">10°</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
+      <div class="github">
+        <small>
+          <a href="https://github.com/NikaN-A/WeatherApp" target="_blank"
+            >Open-source code,</a
+          >by Nika N
+        </small>
+      </div>
     </div>
+
     <script src="script.js"></script>
   </body>
 </html>
